[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Textures/card_base.png" type="Texture" id=1]
[ext_resource path="res://Assets/Cards/Cards.gd" type="Script" id=2]

[node name="Card" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -976.0
margin_bottom = -536.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card_Image" type="TextureRect" parent="."]
show_behind_parent = true
margin_right = 48.0
margin_bottom = 64.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Card_Image"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 48.0
margin_bottom = 64.0
text = "TEST"
align = 1
valign = 1

[node name="Anim" type="AnimationPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="." to="." method="_on_Card_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
